--- a/scss/main.scss
+++ b/scss/main.scss
@@ -70,7 +70,6 @@ button:focus {
 
 // navigation
 .nav {
-  // position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -115,7 +114,7 @@ button:focus {
     margin-left: 0.5rem;
 
     &::after {
-      content: "";
+      content: '';
       position: absolute;
       width: 4rem;
       height: 4rem;
@@ -141,10 +140,8 @@ button:focus {
   &__menu {
     display: none;
     position: absolute;
-    // right: 0;
-    // top: 30px;
+    width: 6rem;
     padding: 0.8rem;
-    border: 1px solid red;
   }
 }
 
